delete useless development benchmarks etc.